XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~
- Removed net.xp_framework.website from ports (now resides in xpadmin
  repository, web/src)
  (friebe)


Version 5.7.2, released 2009-03-27
----------------------------------
SVN version: 12947

Heads up!
~~~~~~~~~
- Removed xp-net.xp_framework-{VERSION}.xar from boot classpath. It is
  no longer required for runners, that's all in xp-tools-${VERSION}.xar.
  See http://news.xp-framework.net/article/290/2009/03/27/
  (friebe)

RFCs
~~~~
- Implemented RFC #0087 - Move class details information to ClassLoader
  (friebe)
- Implemented RFC #0174 - io.collections interface additions / io.streams 
  integration
  (friebe)

Features
~~~~~~~~
- Added lang.Primitive::wrapperClass() method
  (friebe)
- Included type information in unittest.AssertionFailedError's message
  See http://news.xp-framework.net/article/291/2009/03/28/
  (friebe)
- Included prerequisites in unittest.PrerequisitesNotMetError's message
  (friebe)
- Added lang.reflect.Package::getSimpleName() which complements 
  lang.XPClass::getSimpleName()
  (friebe)
- Added util.log.StreamAppender to use streams as log appender
  (hinckel)
- Added io.streams.ChannelInputStream and io.streams.ChannelOutputStream 
  classes that read from / write to stdin, stdout and stderr
  (friebe)
- Made peer.ftp.FtpConnection constructor accept not only strings but also
  peer.URL objects - same as in peer.http.HttpConnection
  (friebe)
- Implemented feature suggested in bug #31 - Allow Numbers in Scriptlet
  States
  (friebe)
- Added io.collections.ArchiveCollection class to work with XARs
  (friebe)
- Added support for enums to the Remote API (EASC)
  See http://news.xp-framework.net/article/287/2009/01/28/
  (hinckel, friebe)
- Made lang.XPClass::isSubclassOf() accept not only a string with the 